@@ -17,7 +17,7 @@ import com.google.testing.compile.Compiler;
 class JsonAnnotationProcessorTest {
 
   @Test
-  void test() {
+  void recordTest() {
     JavaFileObject file = forSourceLines("test.Foo",
         "package test;",
 
@@ -32,5 +32,51 @@ class JsonAnnotationProcessorTest {
         .compile(file);
     
     assertTrue(compile.errors().isEmpty());
+  }
+
+  @Test
+  void pojoTest() {
+    JavaFileObject file = forSourceLines("test.Foo",
+        "package test;",
+
+        "import com.github.tonivade.purejson.Json;",
+
+        "@Json",
+        "public final class Foo {",
+          "private final int id;",
+          "private final String name;",
+          "public Foo(int id, String name) {",
+            "this.id = id;",
+            "this.name = name;",
+          "}",
+          "public int getId() { return id; }",
+          "public String getName() { return name; }",
+        "}");
+    
+    Compilation compile = Compiler.javac()
+        .withOptions("--enable-preview", "-source", 15)
+        .withProcessors(new JsonAnnotationProcessor())
+        .compile(file);
+    
+    assertTrue(compile.errors().isEmpty());
+  }
+
+  @Test
+  void notSupported() {
+    JavaFileObject file = forSourceLines("test.Foo",
+        "package test;",
+
+        "import com.github.tonivade.purejson.Json;",
+
+        "@Json",
+        "public interface Foo {",
+        "}");
+    
+    Compilation compile = Compiler.javac()
+        .withOptions("--enable-preview", "-source", 15)
+        .withProcessors(new JsonAnnotationProcessor())
+        .compile(file);
+    
+    assertTrue(compile.errors().size() == 1);
   }
 }
